WGD-887 [IE11 only] Number of days/contacts can no longer be selected for dashlets on IE11

--- a/src/app/shared/components/dashboard-custom-metric-dashlet/dashboard-custom-metric-dashlet.component.less
+++ b/src/app/shared/components/dashboard-custom-metric-dashlet/dashboard-custom-metric-dashlet.component.less
@@ -5,6 +5,15 @@
     line-height: @menu-item-height !important;
 }
 
+@media screen and (-ms-high-contrast: active), screen and (-ms-high-contrast: none) {
+    /* IE10+ specific styles go here */
+    .ie-header-class {
+        app-form-input {
+            min-width: 40px !important;
+        }
+    }
+}
+
 app-dashboard-custom-metric-dashlet {
     .dashboard-box {
         height: 170px;
